refactor(web): Cleaned up my code

--- a/src/Intranet.Web/Intranet.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/Intranet.Web/Intranet.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/newatcert']">
+                    <a [routerLink]="['/checklist']">
                         <span class='glyphicon glyphicon-th-list'></span> New at Certaincy
                     </a>
                 </li>
