--- a/src/Intranet.Web/Intranet.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/Intranet.Web/Intranet.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/news']"><img src="/image/logo.png"></a>
+            <a class='navbar-brand' [routerLink]="['/']"><img src="/image/logo.png"></a>
         </div>
         <div class='clearfix'></div>
         <div class='collapse navbar-collapse' [ngClass]="{ 'in': isIn }">
