--- a/src/Intranet.Web/Intranet.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/Intranet.Web/Intranet.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -17,6 +17,11 @@
                         <span class='glyphicon glyphicon-list-alt'></span> News
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/faq']" data-toggle="collapse">
+                        <span class='glyphicon glyphicon-question-sign'></span> FAQ
+                    </a>
+                </li>
               <!-- Not in use atm -->
                 <!--<li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/checklist']" data-toggle="collapse">
@@ -34,7 +39,7 @@
                     </a>
                 </li>-->
                 <li [routerLinkActive]="['link-active']">
-                    <a class="nav-link" href="https://certaincy-time-report.herokuapp.com/" data-toggle="collapse">
+                    <a class="nav-link" href="http://time.certaincy.com/" data-toggle="collapse">
                         <span class='glyphicon glyphicon-time'></span> TIME
                     </a>
                 </li>
