feat(web): Adding FAQ page, possible to edit but PUT and POST is not working yet

--- a/src/Intranet.Web/Intranet.Web/ClientApp/app/components/faq/faq.component.css
+++ b/src/Intranet.Web/Intranet.Web/ClientApp/app/components/faq/faq.component.css
@@ -1,5 +1,15 @@
-﻿@import url(https://fonts.googleapis.com/css?family=Roboto);
+﻿.list-group-item-heading {
+  font-size: 2rem;
+}
 
-  h3, a, p, label, input {
-  	font-family: 'Roboto';
-  }
+.list-group-item-text {
+  font-size: 1.7rem;
+}
+
+.list-group-item-heading ~ .collapsible.collapsed {
+  height: 0px;
+  overflow: hidden;
+}
+ .list-group-item-heading ~ .collapsible {
+   height: 100%;
+}
