feat(web): Possible to update FAQ (but not category)

--- a/src/Intranet.Web/Intranet.Web/ClientApp/app/components/faq/faq.component.html
+++ b/src/Intranet.Web/Intranet.Web/ClientApp/app/components/faq/faq.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="container-fluid">
-  <h1>FAQ</h1>&nbsp;
+  <h1>FAQ</h1>
   <div *ngFor="let faqByCategory of faqByCategories">
     <h2 id="{{faqByCategory.category.url}}">
       <span *ngIf="!isAdmin && faqByCategory && faqByCategory.category.title">
@@ -10,11 +10,17 @@
         [inline]="true"
         [elementId]="'edit-title-category-' + faqByCategory.category.id"
         [text]="faqByCategory.category.title"
-        (onEditorContentChange)="onEditorContentChange($event)"
+        (onEditorContentChange)="onCategoryTitleChange($event, faqByCategory.category)"
       ></text-editor>
     </h2>
     <div class="list-group" (click)="$event.preventDefault()">
-      <a *ngFor="let faq of faqByCategory.faqs" id="{{faq.url}}" href="#" (click)="!isAdmin && toggle(faq.id)" class="list-group-item">
+      <a
+        *ngFor="let faq of faqByCategory.faqs"
+        id="{{faq.url}}"
+        href="#"
+        (click)="!isAdmin && toggle(faq.id)"
+        class="list-group-item"
+      >
         <h4 class="list-group-item-heading">
           <span
             (click)="isAdmin && toggle(faq.id)"
@@ -30,8 +36,14 @@
             [inline]="true"
             [elementId]="'edit-title-editor-question-' + faq.id"
             [text]="faq.question"
-            (onEditorContentChange)="onEditorContentChange($event)"
+            (onEditorContentChange)="onQuestionChange($event, faq)"
           ></text-editor>
+          <span
+            *ngIf="isAdmin"
+            (click)="isAdmin && save(faq)"
+            class="glyphicon glyphicon-floppy-disk pull-right"
+            aria-hidden="true"
+          ></span>
         </h4>
         <div [ngClass]="{ 'collapsed': !isOpen(faq.id) }" class="collapsible">
           <p *ngIf="!isAdmin && faq.answer" class="list-group-item-text">{{faq.answer}}</p>
@@ -41,7 +53,7 @@
             [inline]="true"
             [elementId]="'edit-title-editor-answer-' + faq.id"
             [text]="faq.answer"
-            (onEditorContentChange)="onEditorContentChange($event)"
+            (onEditorContentChange)="onAnswerChange($event, faq)"
           ></text-editor>
           <keywords-strip
             *ngIf="!isAdmin"
@@ -52,8 +64,14 @@
             [edit]="true"
             [keywords]="faq.keywords"
             [elementId]="'edit-keywords-' + faq.id"
-            (onEditorContentChange)="onEditorContentChange($event)"
+            (onEditorContentChange)="onKeywordsChange($event, faq)"
           ></keywords-strip>
+        </div>
+        <div *ngIf="faq.id === saved.faqId && saved.success" class="alert alert-success">
+          <strong>Success!</strong> {{saved.success}}
+        </div>
+        <div *ngIf="faq.id === saved.faqId && saved.error" class="alert alert-danger">
+          <strong>Error!</strong> {{saved.error}}
         </div>
       </a>
     </div>
